--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DemandFlow - Sistema de Gestão de Demandas</title>
+    <title>ALKC - Sistema de Gestão de Demandas</title>
     <style>
         :root {
             --primary: #2563eb;
