--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <div class="logo">DemandFlow</div>
+                <div class="logo">ALKC</div>
                 <nav>
                     <ul>
                         <li><a href="#" class="active">Dashboard</a></li>
