--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALKC - Sistema de Gestão de Demandas</title>
+    <title>CALK - Sistema de Gestão de Demandas</title>
     <style>
         :root {
             --primary: #2563eb;
@@ -306,7 +306,7 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <div class="logo">ALKC - Sistema de Gestão de Demandas</div>
+                <div class="logo">CALK - Sistema de Gestão de Demandas</div>
                 <nav>
                     <ul>
                         <li><a href="#" class="active">Dashboard</a></li>
